k8s/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-loadbalancer
  namespace: demo-app
  labels:
    app: demo-app
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: demo-app
